--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,3 +3,10 @@ $media-tablet: 768px;
 $media-phone: 320px;
 
 $hover-duration: 300ms;
+
+$container-width: 960px;
+$aside-left-width: 630px;
+$aside-right-width: 300px;
+
+$body-color: #333;
+$golden-font-color: #8d7249;
