--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -1,3 +1,10 @@
 @import "blocks/hero";
 @import "blocks/contact-form";
 @import "blocks/phone";
+@import "blocks/titles";
+@import "blocks/coins";
+@import "blocks/content";
+@import "blocks/ask";
+@import "blocks/moto";
+@import "blocks/awards";
+@import "blocks/form";
