--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,5 +1,5 @@
 $media-desktop: 1024px;
-$media-tablet: 768px;
+$media-tablet: 900px;
 $media-phone: 320px;
 
 $hover-duration: 300ms;
@@ -10,3 +10,7 @@ $aside-right-width: 300px;
 
 $body-color: #333;
 $golden-font-color: #8d7249;
+$link-color: #004a80;
+
+$gray-bg: #e7e7e7;
+$dark-gray-bg: #a6a096;
