--- a/src/styles/blocks/_contact-form.scss
+++ b/src/styles/blocks/_contact-form.scss
@@ -3,13 +3,25 @@
 .contact-form {
   margin-top: 40px;
   margin-bottom: 30px;
-
-  &__aside-left {
-    width: $aside-left-width;
-  }
+  position: relative;
 
   &__aside-rigth {
-    width: $aside-right-width;
+    margin-top: 20px;
+  }
+
+  @include for-tablet {
+    &__aside-left {
+      width: $aside-left-width;
+      padding-right: 20px;
+    }
+
+    &__aside-rigth {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      width: $aside-right-width;
+      border: 1px solid #fff;
+    }
   }
 
   &__title {
@@ -29,6 +41,30 @@
 
     span {
       font-family: "Raleway", serif;
+    }
+  }
+
+  &__arrow {
+    @include for-phone {
+      display: none;
+    }
+    text-align: right;
+    margin-top: 50px;
+
+    p {
+      height: 80px;
+      display: inline-block;
+      background: {
+        image: url("../images/arrow.png");
+        repeat: no-repeat;
+        position: center center;
+        size: contain;
+      }
+      padding: 20px 40px;
+      color: #fff;
+      font-size: 28px;
+      font-weight: 700;
+      letter-spacing: 0.14px;
     }
   }
 }
