--- a/src/styles/blocks/_hero.scss
+++ b/src/styles/blocks/_hero.scss
@@ -13,20 +13,24 @@
   }
 
   &__aside-left {
-    width: $aside-left-width;
     position: relative;
+    @include for-tablet {
+      width: $aside-left-width;
+    }
   }
 
   &__photo {
-    position: relative;
-    right: 40px;
-    bottom: -4px;
+    @include for-phone {
+      width: 100%;
+    }
+    @include for-tablet {
+      position: relative;
+      right: 50px;
+      bottom: -4px;
+    }
   }
 
   &__moto {
-    position: absolute;
-    right: 0;
-    top: 65px;
     width: 340px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8), 0 0 5px rgba(0, 0, 0, 0.23);
     color: #fff;
@@ -34,6 +38,17 @@
     font-weight: 700;
     line-height: 30px;
     letter-spacing: 0.6px;
+
+    @include for-phone {
+      padding-top: 20px;
+      padding-bottom: 10px;
+    }
+
+    @include for-tablet {
+      position: absolute;
+      right: 0;
+      top: 65px;
+    }
 
     span {
       display: block;
