--- a/src/styles/blocks/_phone.scss
+++ b/src/styles/blocks/_phone.scss
@@ -1,9 +1,22 @@
+@import "../utils";
+
 .phone {
-  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #a6a096;
+  flex-wrap: wrap;
+  background-color: $dark-gray-bg;
+  text-align: center;
+  border-bottom: 2px solid #fff;
+
+  @include for-phone {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  @include for-tablet {
+    height: 60px;
+  }
 
   &__text {
     color: #fff;
@@ -15,6 +28,10 @@
   }
 
   &__phone {
+    @include for-phone {
+      display: block;
+    }
+
     color: #004a80;
     letter-spacing: 1.4px;
     font: {
